--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="skill-row">
       <img class="Comp-img" src="images/computer.png" alt="comp-img">
       <h3>Best skill</h3>
-      <p>My best skill is web developing.I can make website with Html,Css and javascript.I am best at Html and Css.
+      <p>My best skill is web developing.I can make website with HTML,CSS and JavaScript.I am best at HTML and CSS.
 I have many work experience.</p>
     </div>
   </div>
